--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "AgileWorkflow",
   "main": "app.js",
   "dependencies": {
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "handlebars": "^4.2.0",
     "mysql": "^2.17.1",
     "socket.io": "^2.2.0"
   },
