--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "AgileWorkflow",
   "main": "app.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-session": "^1.3.3",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
