--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "cookie-session": "^1.3.3",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
+    "express-hbs": "^2.1.2",
     "handlebars": "^4.2.0",
     "mysql": "^2.17.1",
     "socket.io": "^2.2.0"
