--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "app.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.4.0",
     "cookie-session": "^1.3.3",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-hbs": "^2.1.2",
+    "express-socket.io-session": "^1.3.5",
     "handlebars": "^4.2.0",
+    "keygrip": "^1.1.0",
     "mysql": "^2.17.1",
     "socket.io": "^2.2.0"
   },
