--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "buffer": "^5.4.3",
     "cookie": "^0.4.0",
     "cookie-session": "^1.3.3",
     "dotenv": "^8.1.0",
