--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "handlebars": "^4.2.0",
     "keygrip": "^1.1.0",
     "mysql": "^2.17.1",
-    "socket.io": "^2.2.0"
+    "nodebb-plugin-import-vbulletin": "^0.1.8",
+    "socket.io": "^2.2.0",
+    "util": "^0.12.1"
   },
   "devDependencies": {},
   "scripts": {
