--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-hbs": "^2.1.2",
+    "express-http-to-https": "^1.1.4",
     "express-socket.io-session": "^1.3.5",
     "handlebars": "^4.2.0",
     "keygrip": "^1.1.0",
