--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "AgileWorkflow",
   "main": "app.js",
   "dependencies": {
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0",
+    "@fullcalendar/interaction": "^4.3.0",
     "bcryptjs": "^2.4.3",
     "buffer": "^5.4.3",
     "cookie": "^0.4.0",
