--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fullcalendar/core": "^4.3.1",
     "@fullcalendar/daygrid": "^4.3.0",
     "@fullcalendar/interaction": "^4.3.0",
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "buffer": "^5.4.3",
     "cookie": "^0.4.0",
